--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="./src/assets/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ecommerce product page</title>
+  <!-- google icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
